--- a/Login/style.css
+++ b/Login/style.css
@@ -1,14 +1,10 @@
 @import url(reset.css);
 body {
     font-family: 'Noto Sans KR', sans-serif;
+    overflow: hidden;
+    display: flex;
+    justify-content: space-between;
 }
-
-
-/* input {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-} */
 
 button {
     background: inherit;
@@ -20,18 +16,95 @@ button {
     cursor: pointer
 }
 
+/* main details */
 
-/* login form detail  */
+#container {
+    background: linear-gradient(to right bottom, #f0957e,#7aaecb);
+    width: 70vw;
+    padding: 20px;
+}
+
+/* header button details */
+
+.menubtn {
+    width: 36px;
+    height: 36px;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    transition: all .5s ease-in-out;
+    padding: 0;
+    margin: 0;
+    /* border: 3px solid #000; */
+}
+
+.menubtn_burger {
+    width: 36px;
+    height: 5px;
+    background: #000;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(255, 101, 47, .2);
+    transition: all .5s ease-in-out;
+}
+
+.menubtn_burger::before, .menubtn_burger::after {
+    content: '';
+    position: absolute;
+    width: 36px;
+    height: 5px;
+    background: #000;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(255, 101, 47, .2);
+    transition: all .5s ease-in-out;
+}
+
+.menubtn_burger::before {
+    transform: translateY(-13px);
+}
+
+.menubtn_burger::after {
+    transform: translateY(13px);
+}
+
+/* ANIMATION */
+
+.menubtn.open .menubtn_burger {
+    transform: translateX(-50px);
+    background: transparent;
+    box-shadow: none;
+}
+
+.menubtn.open .menubtn_burger::before {
+    transform: rotate(45deg) translate(35px, -35px);
+}
+
+.menubtn.open .menubtn_burger::after {
+    transform: rotate(-45deg) translate(35px, 35px);
+}
+
+/* login form details  */
 
 #login {
+    display: flex;
     width: 360px;
-    margin: 80px;
+    height: 100vh;
+    margin: 0 80px;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .loginLogo {
-    height: 120px;
+    display: flex;
+    height: 100px;
     font-size: 90px;
-    text-align: center;
+    justify-content: center;
+    margin-top: 40px;
+}
+
+.loginLogo img {
+    width: 180px;
 }
 
 .loginForm h2 {
@@ -40,14 +113,28 @@ button {
     line-height: 30px;
 }
 
-.loginId,
-.loginPw {
-    width: 340px;
-    height: 39px;
+.loginId, .loginPw {
+    width: 360px;
+    height: 49px;
+    font-size: 16px;
     margin: 0 0 10px 0;
-    padding: 10px;
+    padding: 0;
     border: 0;
     border-bottom: 1px solid black;
+}
+
+input:focus {
+    outline: none;
+}
+
+input:focus::placeholder {
+    color: transparent;
+}
+
+input::placeholder {
+    color: #6B6B6B;
+    font-size: 16px;
+    letter-spacing: .3px;
 }
 
 .loginAdd {
@@ -83,7 +170,7 @@ button {
 .loginBtn {
     height: 48px;
     width: 360px;
-    background-color: #f0957E;
+    background-color: #60f;
     color: whitesmoke;
     font-size: 16px;
     border-radius: 3px;
@@ -131,6 +218,8 @@ button {
     height: 48px;
     border-radius: 3px;
     border: 1px solid rgb(193, 79, 68);
+    background-color: white;
+    color: #1b1b1b;
     font-size: 13px;
     margin: 0 0 10px 0;
 }
@@ -139,14 +228,20 @@ button {
     width: 360px;
     height: 48px;
     border-radius: 3px;
-    background-color: #375397;
-    color: whitesmoke;
+    background-color: white;
+    border: 1px solid #375397;
+    color: #1b1b1b;
     font-size: 13px;
+    margin: 0 0 10px 0;
 }
 
 .loginCompany {
-    font-size: 24px;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 24px;
+}
+
+.loginCompany img {
+    height: 24px;
     text-align: center;
-    position: relative;
-    bottom: 30px;
 }
