--- a/Login/style.css
+++ b/Login/style.css
@@ -24,6 +24,15 @@ button {
     padding: 20px;
 }
 
+#container h1 {
+    font-size: 54px;
+    font-weight: 500;
+    text-align: center;
+    position: relative;
+    line-height: 72px;
+    top: 300px;
+}
+
 /* header button details */
 
 .menubtn {
