--- a/Community/style.css
+++ b/Community/style.css
@@ -7,6 +7,7 @@ a {
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     padding-top: 60px;
+    width: 100vw;
 }
 
 .chatshortcut {
@@ -40,7 +41,7 @@ header {
     position: fixed;
     top: 0;
     align-items: center;
-    z-index: 1;
+    z-index: 2;
 }
 
 .logo_nav {
@@ -60,13 +61,13 @@ header nav {
     justify-content: space-between;
 }
 
-header a {
+header nav a {
     padding: 6px;
     font-size: 20px;
     transition: .5s;
 }
 
-header a:hover {
+header nav a:hover {
     transform: scale(104%);
 }
 
@@ -96,15 +97,21 @@ header a:hover {
 }
 
 .profilebox {
+    position: relative;
     display: flex;
     align-items: center;
+    justify-content: space-between;
+    width: 150px;
 }
 
-.profile {
-    width: 36px;
-    height: 36px;
-    border-radius: 50%;
-    overflow: hidden;
+.profilebox nav {
+    width: 100px;
+}
+
+.profilebox nav a {
+    font-size: 14px;
+    margin: 0;
+    padding: 0;
 }
 
 .profilebox i {
@@ -113,43 +120,214 @@ header a:hover {
     margin-left: 5.5px;
 }
 
-.profileImage {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+/* Login details */
+
+#login {
+    position: absolute;
+    top:60px;
+    right: 0px;
+    display: flex;
+    width: 320px;
+    height: 100vh;
+    margin: 0 80px;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+#login a {
+    color: purple;
+    text-decoration: underline;
+}
+
+.loginForm {
+    width: 320px;
+    padding:20px 40px;
+    border-radius: 8px;
+    background-color: white;
+    box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
+}
+
+.loginLogo {
+    display: flex;
+    height:50px;
+    font-size: 90px;
+    justify-content: center;
+    margin: 20px 0;
+}
+
+.loginLogo img {
+    width: 180px;
+}
+
+.loginForm h2 {
+    height: 30px;
+    font-size: 20px;
+    line-height: 30px;
+}
+
+.loginId, .loginPw {
+    width: 320px;
+    height: 49px;
+    font-size: 16px;
+    margin: 0 0 10px 0;
+    padding: 0;
+    border: 0;
+    border-bottom: 1px solid black;
+}
+
+input:focus {
+    outline: none;
+}
+
+input:focus::placeholder {
+    color: transparent;
+}
+
+input::placeholder {
+    color: #6B6B6B;
+    font-size: 16px;
+    letter-spacing: .3px;
+}
+
+.loginAdd {
+    height: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0 0 10px 0;
+}
+
+.loginKeep {
+    line-height: 0px;
+}
+
+.loginKeep input {
+    width: 15px;
+    height: 15px;
+    margin: 0 4px 0 0;
+}
+
+.loginKeep label {
+    height: 20px;
+    position: relative;
+    top: -2.5px;
+    font-size: 14px;
+}
+
+.accountnull {
+    text-align: right;
+    font-size: 14px;
+}
+
+.loginBtn {
+    height: 48px;
+    width: 320px;
+    background-color: #60f;
+    border: 0;
+    color: whitesmoke;
+    font-size: 16px;
+    border-radius: 3px;
+}
+
+.accountforgot {
+    font-size: 14px;
+    margin-top: 12px;
+    text-align: center;
+}
+
+.loginOr {
+    display: flex;
+    flex-basis: 100%;
+    align-items: center;
+    color: rgba(0, 0, 0, 0.35);
+    font-size: 12px;
+    margin: 24px 0px;
+}
+
+.loginOr::before {
+    content: "";
+    flex-grow: 1;
+    background: rgba(0, 0, 0, 0.35);
+    width: 210px;
+    height: 1px;
+    font-size: 0px;
+    line-height: 0px;
+    margin: 0px 10px 0 0;
+}
+
+.loginOr::after {
+    content: "";
+    flex-grow: 1;
+    background: rgba(0, 0, 0, 0.35);
+    width: 210px;
+    height: 1px;
+    font-size: 0px;
+    line-height: 0px;
+    margin: 0 0 0 10px;
+}
+
+.loginGl {
+    width: 320px;
+    height: 48px;
+    border-radius: 3px;
+    border: 1px solid rgb(193, 79, 68);
+    background-color: white;
+    color: #1b1b1b;
+    font-size: 13px;
+    margin: 0 0 10px 0;
+}
+
+.loginFb {
+    width: 320px;
+    height: 48px;
+    border-radius: 3px;
+    background-color: white;
+    border: 1px solid #375397;
+    color: #1b1b1b;
+    font-size: 13px;
+    margin: 0 0 10px 0;
+}
+
+.loginCompany {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 24px;
+}
+
+.loginCompany img {
+    height: 24px;
+    text-align: center;
 }
 
 /* main details */
 
 .carouselctn {
     position: relative;
-    /* top:60px */
+    width: 100vw;
+    overflow: hidden;
 }
 
 .carousel {
     height: 300px;
-    width: 1920px;
-    overflow: hidden;
-    width: 100%;
+    width: 300vw;
+    /* display: flex; */
+    transform: translateX(0px);
+    transition: transform .5s;
+    margin: 0;
+    padding: 0;
 }
 
 .carouselItem {
-    width: 100%;
-    width: 1920px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    z-index: 0;
-    opacity: 0;
-    transition: all .5s ease-in-out;
-    transform: scale(.95);
-}
-
-.showingg {
-    opacity: 1;
+    height: 300px;
+    width: 100vw;
+    flex-direction: row;
     z-index: 1;
-    transform: none;
+    opacity: 1;
+    object-fit:cover;
+    margin: 0;
+    padding: 0;
+    border: 0px;
+    
 }
 
 .btnctn {
@@ -158,10 +336,10 @@ header a:hover {
     margin: 0 auto;
     position: relative;
     bottom: 24px;
+    z-index: 1;
 }
 
 .carouselbtn {
-    z-index: 1;
     width: 36px;
     height: 6px;
     margin: 0 2px;
@@ -358,7 +536,7 @@ main hr {
     font-size: 30px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 500;
-    margin: 20px 0;
+    margin: 30px 0 20px 0;
 }
 
 .boardtitle button {
@@ -490,6 +668,7 @@ footer .fa-youtube {
 footer .fa-instagram {
     background: linear-gradient(to bottom, rgb(252, 176, 69), rgb(253, 29, 29), rgb(131, 58, 180));
     -webkit-background-clip: text;
+    background-clip: text;
     -webkit-text-fill-color: transparent;
 }
 
