--- a/Login/style.css
+++ b/Login/style.css
@@ -1,4 +1,5 @@
 @import url(reset.css);
+
 body {
     font-family: 'Noto Sans KR', sans-serif;
     overflow: hidden;
@@ -183,11 +184,12 @@ input::placeholder {
     color: whitesmoke;
     font-size: 16px;
     border-radius: 3px;
+    border:0px;
 }
 
 .accountforgot {
     font-size: 14px;
-    margin-top: 12px;
+    margin: 12px 0 12px 0;
     text-align: center;
 }
 
@@ -222,7 +224,7 @@ input::placeholder {
     margin: 0 0 0 10px;
 }
 
-.loginGl {
+.loginGl {  
     width: 360px;
     height: 48px;
     border-radius: 3px;
