--- a/Community/style.css
+++ b/Community/style.css
@@ -7,7 +7,8 @@ a {
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     padding-top: 60px;
-    width: 100vw;
+    width: 100%;
+    /* overflow-x: hidden; */
 }
 
 .chatshortcut {
@@ -18,6 +19,10 @@ body {
     height: 36px;
     border-radius: 72px;
     border: 1.5px solid black;
+}
+
+.far {
+    cursor: pointer;
 }
 
 /* header details */
@@ -73,11 +78,10 @@ header nav a:hover {
 
 .searchbox {
     width: auto;
-    height: 39px;
+    height: 29px;
     display: flex;
     align-items: center;
     border-bottom: 1px solid black;
-    margin-bottom: 4px;
 }
 
 .search {
@@ -122,34 +126,42 @@ header nav a:hover {
 
 /* Login details */
 
-#login {
+.loginForm {
+    display: none;
     position: absolute;
-    top:60px;
+    top: 60px;
     right: 0px;
-    display: flex;
-    width: 320px;
-    height: 100vh;
-    margin: 0 80px;
     flex-direction: column;
     justify-content: space-between;
-}
-
-#login a {
-    color: purple;
-    text-decoration: underline;
-}
-
-.loginForm {
     width: 320px;
-    padding:20px 40px;
+    padding: 20px 40px;
     border-radius: 8px;
     background-color: white;
     box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
 }
 
+.loginShowing {
+    display: flex;
+    position: absolute;
+    top: 60px;
+    right: 0px;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 320px;
+    padding: 20px 40px;
+    border-radius: 8px;
+    background-color: white;
+    box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
+}
+
+.loginForm a {
+    color: purple;
+    text-decoration: underline;
+}
+
 .loginLogo {
     display: flex;
-    height:50px;
+    height: 50px;
     font-size: 90px;
     justify-content: center;
     margin: 20px 0;
@@ -301,33 +313,41 @@ input::placeholder {
 
 /* main details */
 
+main {
+    width: 100%;
+}
+
 .carouselctn {
     position: relative;
-    width: 100vw;
+    width: 100%;
     overflow: hidden;
 }
 
 .carousel {
     height: 300px;
-    width: 300vw;
-    /* display: flex; */
+    width: 300%;
+    display: flex;
     transform: translateX(0px);
     transition: transform .5s;
     margin: 0;
     padding: 0;
 }
 
-.carouselItem {
+.carouselItemctn {
     height: 300px;
     width: 100vw;
+}
+
+.carouselItem {
+    height: 300px;
+    width: 100%;
     flex-direction: row;
     z-index: 1;
     opacity: 1;
-    object-fit:cover;
+    object-fit: cover;
     margin: 0;
     padding: 0;
     border: 0px;
-    
 }
 
 .btnctn {
